--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/platform-server": "2.2.1",
     "@ionic/storage": "1.1.7",
+    "angular2-highcharts": "^0.4.1",
+    "chart.js": "^2.4.0",
     "ionic-angular": "2.0.0-rc.4",
     "ionic-native": "2.2.11",
     "ionicons": "3.0.0",
+    "ng2-charts": "^1.4.4",
     "rxjs": "5.0.0-beta.12",
     "zone.js": "0.6.26"
   },
