--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "2.2.1",
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/platform-server": "2.2.1",
+    "@ionic-native/call-number": "^3.1.1",
     "@ionic/storage": "1.1.7",
     "angular2-highcharts": "^0.4.1",
     "ionic-angular": "2.0.0-rc.4",
