--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/platform-server": "2.2.1",
     "@ionic-native/call-number": "^3.1.1",
+    "@ionic-native/core": "^3.2.1",
     "@ionic/storage": "1.1.7",
     "angular2-highcharts": "^0.4.1",
     "ionic-angular": "2.0.0-rc.4",
-    "ionic-native": "2.2.11",
+    "ionic-native": "^2.9.0",
     "ionicons": "3.0.0",
     "ng2-order-pipe": "^0.1.2",
     "rxjs": "5.0.0-beta.12",
