--- a/package.json
+++ b/package.json
@@ -13,25 +13,26 @@
     "@angular/common": "2.2.1",
     "@angular/compiler": "2.2.1",
     "@angular/compiler-cli": "2.2.1",
-    "@angular/core": "2.2.1",
+    "@angular/core": "^2.2.1",
     "@angular/forms": "2.2.1",
     "@angular/http": "2.2.1",
     "@angular/platform-browser": "2.2.1",
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/platform-server": "2.2.1",
-    "@ionic-native/call-number": "^3.1.1",
-    "@ionic-native/core": "^3.2.1",
+    "@ionic-native/call-number": "^3.4.4",
+    "@ionic-native/core": "^3.4.4",
     "@ionic/storage": "1.1.7",
-    "angular2-highcharts": "^0.4.1",
-    "ionic-angular": "2.0.0-rc.4",
-    "ionic-native": "^2.9.0",
+    "angular2-highcharts": "^0.5.5",
+    "ionic-angular": "^2.0.0-rc.4",
+    "ionic-native": "2.2.11",
     "ionicons": "3.0.0",
     "ng2-order-pipe": "^0.1.2",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "^5.0.0-beta.12",
     "zone.js": "0.6.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "^1.1.3",
+    "@ionic/app-scripts": "1.0.0",
+    "sw-toolbox": "^3.6.0",
     "typescript": "2.0.9"
   },
   "cordovaPlugins": [
