--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@ionic-native/call-number": "^3.4.4",
     "@ionic-native/core": "^3.4.4",
     "@ionic/storage": "1.1.7",
-    "angular2-highcharts": "^0.5.5",
+    "@types/node": "^7.0.12",
+    "angular2-highcharts": "^0.4.1",
     "ionic-angular": "^2.0.0-rc.4",
     "ionic-native": "2.2.11",
     "ionicons": "3.0.0",
@@ -31,7 +32,7 @@
     "zone.js": "0.6.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "1.0.0",
+    "@ionic/app-scripts": "1.1.3",
     "sw-toolbox": "^3.6.0",
     "typescript": "2.0.9"
   },
