--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.1.3",
+    "@types/jquery": "^2.0.41",
+    "jquery": "^3.2.1",
     "sw-toolbox": "^3.6.0",
     "typescript": "2.0.9"
   },
