--- a/package.json
+++ b/package.json
@@ -1,58 +1,83 @@
 {
-  "name": "OutOfSchoolChildren",
-  "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
-  "private": true,
-  "scripts": {
-    "clean": "ionic-app-scripts clean",
-    "build": "ionic-app-scripts build",
-    "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve"
-  },
-  "dependencies": {
-    "@angular/common": "2.2.1",
-    "@angular/compiler": "2.2.1",
-    "@angular/compiler-cli": "2.2.1",
-    "@angular/core": "^2.2.1",
-    "@angular/forms": "2.2.1",
-    "@angular/http": "2.2.1",
-    "@angular/platform-browser": "2.2.1",
-    "@angular/platform-browser-dynamic": "2.2.1",
-    "@angular/platform-server": "2.2.1",
-    "@ionic-native/call-number": "^3.4.4",
-    "@ionic-native/core": "^3.4.4",
-    "@ionic/storage": "1.1.7",
-    "@types/node": "^7.0.12",
-    "angular2-highcharts": "^0.4.1",
-    "ionic-angular": "^2.0.0-rc.4",
-    "ionic-native": "2.2.11",
-    "ionic2-date-picker": "^1.0.6",
-    "ionicons": "3.0.0",
-    "ng2-order-pipe": "^0.1.2",
-    "rxjs": "^5.0.0-beta.12",
-    "zone.js": "0.6.26"
-  },
-  "devDependencies": {
-    "@ionic/app-scripts": "1.1.3",
-    "@types/jquery": "^2.0.41",
-    "jquery": "^3.2.1",
-    "sw-toolbox": "^3.6.0",
-    "typescript": "2.0.9"
-  },
-  "cordovaPlugins": [
-    "cordova-plugin-whitelist",
-    "cordova-plugin-console",
-    "ionic-plugin-keyboard",
-    "cordova-plugin-statusbar",
-    "cordova-plugin-device",
-    "cordova-plugin-splashscreen"
-  ],
-  "cordovaPlatforms": [
-    "ios",
-    {
-      "platform": "ios",
-      "version": "",
-      "locator": "ios"
+    "name": "OutOfSchoolChildren",
+    "author": "Ionic Framework",
+    "homepage": "http://ionicframework.com/",
+    "private": true,
+    "scripts": {
+        "clean": "ionic-app-scripts clean",
+        "build": "ionic-app-scripts build",
+        "ionic:build": "ionic-app-scripts build",
+        "ionic:serve": "ionic-app-scripts serve"
+    },
+    "dependencies": {
+        "@angular/common": "4.0.0",
+        "@angular/compiler": "4.0.0",
+        "@angular/compiler-cli": "4.0.0",
+        "@angular/core": "4.0.0",
+        "@angular/forms": "4.0.0",
+        "@angular/http": "4.0.0",
+        "@angular/platform-browser": "4.0.0",
+        "@angular/platform-browser-dynamic": "4.0.0",
+        "@ionic-native/core": "3.4.2",
+        "@ionic-native/splash-screen": "3.4.2",
+        "@ionic-native/status-bar": "3.4.2",
+        "@ionic/storage": "2.0.1",
+        "ionic-angular": "3.0.0",
+        "@angular/platform-server": "2.2.1",
+        "@ionic-native/call-number": "3.4.4",
+        "@ionic-native/date-picker": "3.4.4",
+        "@types/node": "7.0.12",
+        "angular2-highcharts": "0.4.1",
+        "cordova-android": "^6.2.3",
+        "cordova-plugin-console": "^1.0.5",
+        "cordova-plugin-datepicker": "^0.9.3",
+        "cordova-plugin-device": "^1.1.4",
+        "cordova-plugin-splashscreen": "^4.0.3",
+        "cordova-plugin-statusbar": "^2.2.1",
+        "cordova-plugin-whitelist": "^1.3.1",
+        "ionic-plugin-keyboard": "^2.2.1",
+        "ionic2-date-picker": "1.0.6",
+        "ionicons": "3.0.0",
+        "rxjs": "5.1.1",
+        "sw-toolbox": "3.4.0",
+        "zone.js": "^0.8.4",
+        "ng2-order-pipe": "0.1.2"
+    },
+    "devDependencies": {
+        "@ionic/app-scripts": "1.3.7",
+        "@types/jquery": "2.0.41",
+        "jquery": "3.2.1",
+        "sw-toolbox": "3.6.0",
+        "typescript": "~2.2.1"
+    },
+    "cordovaPlugins": [
+        "cordova-plugin-whitelist",
+        "cordova-plugin-console",
+        "ionic-plugin-keyboard",
+        "cordova-plugin-statusbar",
+        "cordova-plugin-device",
+        "cordova-plugin-splashscreen"
+    ],
+    "cordovaPlatforms": [
+        "ios",
+        {
+            "platform": "ios",
+            "version": "",
+            "locator": "ios"
+        }
+    ],
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-datepicker": {},
+            "cordova-plugin-console": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-whitelist": {},
+            "ionic-plugin-keyboard": {}
+        },
+        "platforms": [
+            "android"
+        ]
     }
-  ]
 }
