--- a/package.json
+++ b/package.json
@@ -18,14 +18,13 @@
         "@angular/http": "4.0.0",
         "@angular/platform-browser": "4.0.0",
         "@angular/platform-browser-dynamic": "4.0.0",
+        "@angular/platform-server": "2.2.1",
+        "@ionic-native/call-number": "3.4.4",
         "@ionic-native/core": "3.4.2",
+        "@ionic-native/date-picker": "3.4.2",
         "@ionic-native/splash-screen": "3.4.2",
         "@ionic-native/status-bar": "3.4.2",
         "@ionic/storage": "2.0.1",
-        "ionic-angular": "3.0.0",
-        "@angular/platform-server": "2.2.1",
-        "@ionic-native/call-number": "3.4.4",
-        "@ionic-native/date-picker": "3.4.4",
         "@types/node": "7.0.12",
         "angular2-highcharts": "0.4.1",
         "cordova-android": "^6.2.3",
@@ -35,13 +34,14 @@
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.1",
         "cordova-plugin-whitelist": "^1.3.1",
+        "ionic-angular": "3.0.0",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionic2-date-picker": "1.0.6",
         "ionicons": "3.0.0",
+        "ng2-order-pipe": "0.1.2",
         "rxjs": "5.1.1",
         "sw-toolbox": "3.4.0",
-        "zone.js": "^0.8.4",
-        "ng2-order-pipe": "0.1.2"
+        "zone.js": "^0.8.4"
     },
     "devDependencies": {
         "@ionic/app-scripts": "1.3.7",
