--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@types/node": "7.0.12",
         "angular2-highcharts": "0.4.1",
         "cordova-android": "^6.2.3",
+        "cordova-browser": "^4.1.0",
         "cordova-plugin-console": "^1.0.5",
         "cordova-plugin-datepicker": "^0.9.3",
         "cordova-plugin-device": "^1.1.4",
@@ -77,7 +78,8 @@
             "ionic-plugin-keyboard": {}
         },
         "platforms": [
-            "android"
+            "android",
+            "browser"
         ]
     }
 }
