--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "ionic-plugin-keyboard": "^2.2.1",
         "ionic2-date-picker": "1.0.6",
         "ionicons": "3.0.0",
+        "jssha": "^2.3.1",
         "ng2-order-pipe": "0.1.2",
         "rxjs": "5.1.1",
         "sw-toolbox": "3.4.0",
