--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.1",
         "cordova-plugin-whitelist": "^1.3.1",
+        "cordova-sqlite-storage": "^2.3.1",
         "de.appplant.cordova.plugin.local-notification": "^0.8.5",
         "ionic-angular": "3.0.0",
         "ionic-plugin-keyboard": "^2.2.1",
@@ -80,7 +81,8 @@
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
             "ionic-plugin-keyboard": {},
-            "de.appplant.cordova.plugin.local-notification": {}
+            "de.appplant.cordova.plugin.local-notification": {},
+            "cordova-sqlite-storage": {}
         },
         "platforms": [
             "android",
